[tool.poetry]
name = "pyexam"
version = "0.1.0"
description = ""
authors = ["Lorran Oliveira <lorranfoliveira@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.3"
pylatex = "^1.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
